:bug: Fix rem text and icons sizes on mobile

--- a/ui/app/components/CountryCard.module.scss
+++ b/ui/app/components/CountryCard.module.scss
@@ -38,7 +38,7 @@ $cardHeight: 100px;
 	flex-direction: column;
 	justify-content: space-between;
 
-	width: 100%;
+	width: calc(100% - 120px);
 	height: $cardHeight;
 
 	@include breakpoint(medium) {
@@ -49,20 +49,24 @@ $cardHeight: 100px;
 
 		height: 100%;
 	}
+
+	@include breakpoint(large) {
+		width: 100%;
+	}
 }
 
 .titleContainer {
 	width: 300px;
 
-	font-size: 22px;
-	font-weight: bold;
-
 	@include breakpoint(medium) {
-		min-width: 300px;
+		min-width: 280px;
 	}
 }
 
 .title {
+	font-size: 1.35rem;
+	font-weight: bold;
+
 	padding: 5px 0 0 20px;
 	white-space: nowrap;
 	text-overflow: ellipsis;
@@ -78,20 +82,28 @@ $cardHeight: 100px;
 }
 
 .supplementalInfoContainer {
-	width: 100%;
+	width: 65vw;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
+
+	@include breakpoint(small) {
+		width: 100%;
+	}
 }
 
 .commute {
-	min-width: 140px;
-	margin-left: 20px;
-
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+
+	margin-left: 20px;
+	min-width: 50px;
+
+	@include breakpoint(small) {
+		min-width: 120px;
+	}
 }
 
 .commuteIcon {
@@ -103,52 +115,61 @@ $cardHeight: 100px;
 }
 
 .commuteText {
-	font-size: 20px;
+	font-size: 1rem;
 	font-weight: normal;
+
+	@include breakpoint(small) {
+		font-size: 1.25rem;
+	}
 }
 
 .days {
-	min-width: 140px;
-	font-size: 20px;
+	min-width: 50px;
+	font-size: 1rem;
 	font-weight: normal;
+
+	@include breakpoint(small) {
+		min-width: 120px;
+		font-size: 1.25rem;
+	}
 }
 
 .extraCostContainer {
-	min-width: 140px;
+	min-width: 50px;
+
+	@include breakpoint(small) {
+		min-width: 120px;
+	}
 }
 
 .extraCost {
-	font-size: 20px;
+	font-size: 1rem;
 	font-weight: normal;
+	margin: 0;
+
+	@include breakpoint(small) {
+		font-size: 1.25rem;
+	}
 }
 
 .totalCost {
 	margin: 0 0 8px 20px;
-	width: 120px;
-	font-size: 20px;
+	min-width: 100px;
+	font-size: 1.25rem;
 	font-weight: bold;
 
 	@include breakpoint(medium) {
-		width: 100%;
+		min-width: 120px;
 		margin: 0 85px;
 	}
 }
 
-.buttons {
-	width: 180px;
+.deleteButton {
+	margin-right: 30px;
 	opacity: 0.8;
 
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: flex-end;
-}
-
-.deleteButton {
-	margin: 0 20px;
-
 	@include breakpoint(medium) {
-		margin: 0 40px;
+		margin-right: 40px;
 	}
 
 	&:hover {
