--- a/ui/theme/_breakpoints.scss
+++ b/ui/theme/_breakpoints.scss
@@ -1,6 +1,6 @@
 $small-screen: 600px;
 $medium-screen: 900px;
-$large-screen: 1200px;
+$large-screen: 1250px;
 $extra-large-screen: 1536px;
 
 @mixin breakpoint($point) {
